fix: color gap between follous and contactus

--- a/css/oceanica.css
+++ b/css/oceanica.css
@@ -78,7 +78,7 @@ body {
 }
 
 #followus {
-    background-color: #A1BDC8;
+    background-color: #9EBAC5;
     color: #071228;
 }
 
